--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "gabordemooij/redbean": "v4.3.2",
+    "gabordemooij/redbean": "v4.*",
     "common-libs/storage": "*"
   },
   "require-dev": {
