--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,5 @@ after_success:
 - cd $TRAVIS_BUILD_DIR
 - chmod +x makeDocs.sh
 - "./makeDocs.sh"
+script:
+  - cd src && find . -type f -name '*.php' -exec php -l {} ; |grep -v "No syntax errors detected"
