--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ after_success:
 - chmod +x makeDocs.sh
 - "./makeDocs.sh"
 script:
-  - cd src && find . -type f -name '*.php' -exec php -l {};
+  - php -l src/Config.php
